# gpt2

./: .gitignore  README.md  pyproject.toml
configs/: gpt2_124m.py  gpt2_350m.py  sota_350m.py
docs/: plan.md
docs/notes/: notes.md
docs/notes/visuals/: attention.html  attention_shapes.html  attention_study.html  layernorm.html
docs/superpowers/specs/: 2026-05-07-nano-gpt-scratch-design.md
scripts/: eval.py  prepare_data.py  sample.py  train.py
src/nano_gpt/: config.py
src/nano_gpt/data/: loader.py  prepare_fineweb.py  tokenizer.py
src/nano_gpt/eval/: hellaswag.py  loss.py
src/nano_gpt/model/: __init__.py  attention.py  block.py  embeddings.py  gpt.py  mlp.py  norm.py
src/nano_gpt/training/: distributed.py  optim.py  schedule.py  trainer.py
tests/: test_attention.py  test_block.py  test_embeddings.py  test_gpt.py  test_loader.py  test_mlp.py  test_norm.py  test_optim.py  test_prepare_fineweb.py  test_schedule.py  test_tokenizer.py
